--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -4,6 +4,7 @@
         <li>{{item.username}} </li>
     }
 </ul>
+<app-alert [alertType] = "'Success'" [message]="'Hi From Client Page '"></app-alert>
 <div class = "row">
     <div class = "col-8">
         <div class = "card">
@@ -105,7 +106,8 @@
                             <button class = "btn btn-secondary">Reset</button>
                         </div>
                         <div class = "col-6 text-center">
-                            <button class = "btn btn-success" [disabled] ="!form.valid" (click)="onSaveCilent()">{{clientObj.clientId!=0 ? 'Update Client':'Save Client'}}</button>
+                            <app-my-button (onBtnClicked)="onSaveClient($event)" [btnClass]="'btn btn-success'" [btnText]="clientObj.clientId!=0 ? 'Update Client':'Save Client'"> </app-my-button>
+                            <!--<button class = "btn btn-success" [disabled] ="!form.valid" (click)="onSaveCilent()">{{clientObj.clientId!=0 ? 'Update Client':'Save Client'}}</button>-->
                         </div>
                     </div>
                 </form>
